@@ -1,6 +1,14 @@
 2018-08-08  Jonathan Wakely  <jwakely@redhat.com>
 
 	Backport from mainline
+	2018-06-25  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/86292
+	* include/bits/stl_vector.h (vector::_M_range_initialize<InputIter>):
+	Add try-catch block.
+	* testsuite/23_containers/vector/cons/86292.cc: New.
+
+	Backport from mainline
 	2018-07-31  Jonathan Wakely  <jwakely@redhat.com>
 
 	* doc/xml/manual/using.xml: Document all headers for C++11 and later.
